--- a/app/views/docs/interdasting/show.slim
+++ b/app/views/docs/interdasting/show.slim
@@ -1,5 +1,4 @@
-- doc ||= @doc
-h1= doc.version
+h1= @doc.version
 hr
 .col-xs-12
-  = render 'docs/interdasting/documentation', doc: doc
+  = render 'docs/interdasting/documentation', doc: @doc
