--- a/app/views/layouts/interdasting/_navigation.slim
+++ b/app/views/layouts/interdasting/_navigation.slim
@@ -1,5 +1,4 @@
-- interdasting ||= false
-- if interdasting
+- if defined?(interdasting)
   .navbar.navbar-default.navbar-fixed-top
     .container-fluid
       .navbar-header
