Renamed gem to rocket_docs

--- a/app/views/docs/rocket_docs/_controller.markdown.erb
+++ b/app/views/docs/rocket_docs/_controller.markdown.erb
@@ -1,7 +1,7 @@
 ## <%= controller.name %>
 
 <% controller.actions.each do |action| %>
-<%= render 'docs/interdasting/action.markdown.erb', action: action %>
+<%= render 'docs/rocket_docs/action.markdown.erb', action: action %>
 
 ___
 <% end %>
