--- a/app/views/docs/rocket_docs/_controller.slim
+++ b/app/views/docs/rocket_docs/_controller.slim
@@ -6,4 +6,4 @@
     .panel-body
       .panel-group id="#{controller_id(controller)}_accordion"
         - controller.actions.each do |action|
-          = render 'docs/interdasting/action', action: action
+          = render 'docs/rocket_docs/action', action: action
