--- a/app/views/layouts/rocket_docs/application.slim
+++ b/app/views/layouts/rocket_docs/application.slim
@@ -1,9 +1,9 @@
 head
-  title Interdasting
+  title RocketDocs
   = stylesheet_link_tag    "interdasting/application", media: "all"
   = javascript_include_tag "interdasting/application"
 body
-  = render 'layouts/interdasting/navigation'
+  = render 'layouts/rocket_docs/navigation'
   .container
     = yield
-  = render 'layouts/interdasting/modal'
+  = render 'layouts/rocket_docs/modal'
