Parser no longer ignores newlines

--- a/app/views/layouts/rocket_docs/application.slim
+++ b/app/views/layouts/rocket_docs/application.slim
@@ -1,7 +1,7 @@
 head
   title RocketDocs
-  = stylesheet_link_tag    "interdasting/application", media: "all"
-  = javascript_include_tag "interdasting/application"
+  = stylesheet_link_tag    "rocket_docs/application", media: "all"
+  = javascript_include_tag "rocket_docs/application"
 body
   = render 'layouts/rocket_docs/navigation'
   .container
