Customizable title and description

--- a/app/views/layouts/rocket_docs/_navigation.slim
+++ b/app/views/layouts/rocket_docs/_navigation.slim
@@ -2,7 +2,7 @@
   .navbar.navbar-default.navbar-fixed-top
     .container-fluid
       .navbar-header
-        = link_to 'Documentation', rocket_docs.root_path, class: 'navbar-brand'
+        = link_to RocketDocs.title, rocket_docs.root_path, class: 'navbar-brand'
       .collapse.navbar-collapse
         ul.nav.navbar-nav
           li = link_to 'All versions', rocket_docs.root_path
