Added navigation for mobile

--- a/app/views/layouts/rocket_docs/application.slim
+++ b/app/views/layouts/rocket_docs/application.slim
@@ -2,6 +2,8 @@ head
   title = RocketDocs.title
   = stylesheet_link_tag    "rocket_docs/application", media: "all"
   = javascript_include_tag "rocket_docs/application"
+  meta name="viewport" content="width=device-width, initial-scale=1"
+
 body
   = render 'layouts/rocket_docs/navigation'
   .container
