--- a/app/views/layouts/rocket_docs/_navigation.slim
+++ b/app/views/layouts/rocket_docs/_navigation.slim
@@ -2,8 +2,13 @@
   .navbar.navbar-default.navbar-fixed-top
     .container-fluid
       .navbar-header
+        button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#version-nav" aria-expanded="false"
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
         = link_to RocketDocs.title, rocket_docs.root_path, class: 'navbar-brand'
-      .collapse.navbar-collapse
+      .collapse.navbar-collapse#version-nav
         ul.nav.navbar-nav
           li = link_to 'All versions', rocket_docs.root_path
           - RocketDocs::Router.versions.each do |v|
