Added configuration to show or hide description on page load

--- a/app/views/layouts/rocket_docs/_api_description.slim
+++ b/app/views/layouts/rocket_docs/_api_description.slim
@@ -4,7 +4,7 @@
       .panel-heading
         h4.panel-title
           = link_to 'Description', "#rocket_docs_documentation_description", data: { toggle: 'collapse' }
-      .panel-collapse.collapse id='rocket_docs_documentation_description'
+      .panel-collapse.collapse id='rocket_docs_documentation_description' class="#{'in' if RocketDocs.always_display_description}"
         .panel-body
           .panel-group id="rocket_docs_documentation_description_accordion"
             = RocketDocs.format_string(RocketDocs.description)
