--- a/app/views/layouts/rocket_docs/_navigation.slim
+++ b/app/views/layouts/rocket_docs/_navigation.slim
@@ -10,6 +10,8 @@
         = link_to RocketDocs.title, rocket_docs.root_path, class: 'navbar-brand'
       .collapse.navbar-collapse#version-nav
         ul.nav.navbar-nav
-          li = link_to 'All versions', rocket_docs.root_path
-          - RocketDocs::Router.versions.each do |v|
-            li = link_to v.to_s, rocket_docs.version_path(version: v)
+          li class="#{'active' if params[:version].nil?}"
+            = link_to 'All versions', rocket_docs.root_path
+          - RocketDocs::Router.versions.each do |version|
+            li class="#{'active' if params[:version] == version.to_s}"
+              = link_to version.to_s, rocket_docs.version_path(version: version)
