Complete rewrite of the try-out modal -- barebones implementation

--- a/app/views/docs/rocket_docs/_action.slim
+++ b/app/views/docs/rocket_docs/_action.slim
@@ -38,6 +38,6 @@
               - if action.url(method)
                 .col-xs-12
                   hr
-                  = link_to '#', class: 'btn btn-primary try-out', data: { request_method: method, params: action.params(method), url: action.url, toggle: 'modal', target: '#try-out-modal' } do
+                  = link_to '#', class: 'btn btn-primary try-out', data: { request_method: method, params: action.params(method), url: action.url, store_prefix: action_id(action), toggle: 'animated-modal' } do
                     span.glyphicon.glyphicon-new-window
                     |  Try it out
